test/mason/build/modifiedSubMod.good
Compiling [debug] target: _subModule
Build Successful

Modified Bar.chpl to introduce syntax error. rebuilding...

Compiling [debug] target: _subModule
Bar.chpl:9: syntax error: near 'is'
Caught expected error from masonBuild due to syntax error:
MasonError: Build Failed
