test/mason/build/modifiedSubMod.prediff
#!/usr/bin/env bash


# scrub /Bar.chpl to just Bar.chpl
sed 's|.*/Bar.chpl|Bar.chpl|' "$2" > "$2".tmp
mv "$2".tmp "$2"
